base/cadence-icecast2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadence-icecast2
  labels:
    app: cadence-icecast2
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: cadence-icecast2
