base/cadence-icecast2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadence-icecast2
spec:
  rules:
  - host: stream.mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cadence-icecast2
            port:
              number: 8000
